Improve command suggestions to show only relevant options
Implement TabCompleter interface for various commands to provide filtered and context-aware suggestions for command arguments.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: e2f67f7c-87f8-43b9-951a-f1c4c7704203
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: 336b09f8-53eb-45d6-a1ed-5f9458e110c5
Replit-Helium-Checkpoint-Created: true